<resources>
    <string name="app_name">SASocial Network</string>


    <string name="hint_email_login">Email</string>
    <string name="titile_appbar_login">Log In</string>
    <string name="hint_password_login">Password</string>
    <string name="txt_forgotpassword_login">Forget Password?</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_or_login">OR</string>
    <string name="btn_facebook_login">Facebook</string>
    <string name="btn_twitter_login">Twitter</string>




    <string name="titile_appbar_signup">Sign Up</string>
    <string name="hint_conformation_signup">Conformation Password</string>
    <string name="btn_signup">Sign Up</string>

    <string name="facebook_app_id">663848910788077</string>
    <string name="fb_login_protocol_scheme">fb663848910788077</string>
    <string name="discripition_post_dialog">Write Your Description</string>


    <string name="loading_text">Loading ...</string>
    <string name="search_hint">Search Description</string>

    <string name="firebase_notification_id">fcm_channel</string>

    <string name="profile_dummy_count">96</string>
    <string name="profile_post_count">Posts</string>
    <string name="profile_followers_count">Followers</string>
    <string name="profile_following_count">Following</string>
    <string name="profile_update_profile">Update Profile</string>
    <string name="edit_profile_change_profile_picture">Change The Profile Picture</string>
    <string name="edit_profile_username">User Name</string>
</resources>
