<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/ic_cardbackgournd_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="@dimen/_16sdp" android:id="@+id/cardView">

        <TextView
                android:id="@+id/AppEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_cardbackgournd_login"
                android:text="@string/titile_appbar_signup"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"/>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytInputEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_36sdp"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

        <AutoCompleteTextView
                android:id="@+id/EdtEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ovel_shape"
                android:textColorHint="@color/textHint"
                android:drawablePadding="4dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_login"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytInputPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:hintEnabled="false"
            android:padding="@dimen/_4sdp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/LytInputEmailSignUp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp">

        <AutoCompleteTextView
                android:id="@+id/EdtPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ovel_shape"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/_4sdp"
                android:textColorHint="@color/textHint"
                android:hint="@string/hint_password_login"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytConformationSignout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:padding="@dimen/_4sdp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/LytInputPasswordSignup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp" android:layout_marginTop="8dp">

        <AutoCompleteTextView
                android:id="@+id/edtConformationSignout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ovel_shape"
                android:inputType="textPassword"
                android:textColorHint="@color/textHint"
                android:hint="@string/hint_conformation_signup"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/BtnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bck_ovel_shape_button"
            android:text="@string/btn_signup"
            android:textColor="#fff"
            android:layout_margin="@dimen/_32sdp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/LytConformationSignout"/>


    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLogin"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/BtnSignup"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>