<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".views.LoginActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/CrdAppBarLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/ic_cardbackgournd_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="@dimen/_16sdp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_cardbackgournd_login"
                android:text="@string/titile_appbar_login"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"/>

    </androidx.cardview.widget.CardView>
    <ProgressBar
            android:id="@+id/PrgLoginProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytInputEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            android:padding="@dimen/_4sdp"
            android:textColorHint="@color/textHint"
            app:layout_constraintTop_toBottomOf="@+id/CrdAppBarLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <AutoCompleteTextView
                android:id="@+id/EdtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ovel_shape"
                android:textColorHint="@color/textHint"
                android:drawablePadding="4dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_login"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytInputEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:hintEnabled="false"
            android:padding="@dimen/_4sdp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/LytInputEmailLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp">

        <AutoCompleteTextView
                android:id="@+id/EdtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ovel_shape"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/_4sdp"
                android:textColorHint="@color/textHint"
                android:hint="@string/hint_password_login"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/txt_forgotpassword_login"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/LytInputEmailPassword"/>

    <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_ovel_shape_button"
            android:text="@string/txt_btn_login"
            android:textColor="#fff"
            android:layout_margin="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/BtnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="10"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/LytTextOr">

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/textHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:text="@string/txt_or_login"
                android:clickable="false"
                android:textColor="@color/textHint"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/textHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>

    </LinearLayout>


    <com.facebook.login.widget.LoginButton
            android:id="@+id/BtnFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="104dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.523" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/LytTextOr"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.gms.common.SignInButton
            android:layout_width="122dp"
            android:layout_height="0dp"
            android:id="@+id/BtnGmailLogin"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_16sdp" app:layout_constraintTop_toBottomOf="@+id/BtnFacebookLogin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>